# admirals

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  index.html  members.html  progress.html
.github/workflows/: main.yml
.vscode-template/: settings.json
cmake/: FindVulkan.cmake
demo/render/: debug.cpp  debug.h  main.cpp
src/: Engine.cpp
src/engine/: AnimationHandler.hpp  Context.hpp  DataObjects.cpp  DataObjects.hpp  DeferedAction.hpp  DepthOrderedCollection.hpp  DisplayLayer.cpp  DisplayLayer.hpp  Engine.cpp  Engine.hpp  EngineContext.hpp  EventSystem.cpp  EventSystem.hpp  GameObject.cpp  GameObject.hpp  IDisplayLayer.cpp  IDisplayLayer.hpp  IDisplayable.hpp  IDrawable.hpp  IEventHandler.hpp  IInteractiveDisplayable.hpp  IInteractiveDrawable.hpp  IOrdered.hpp  IOrderedObject.hpp  InteractiveDrawable.hpp  Logger.hpp  Model.cpp  Model.hpp  NavMesh.hpp  OrderedCollection.hpp  PathFinding.cpp  PathFinding.hpp  Pathfinding.cpp  QuadTree.cpp  QuadTree.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/engine/UI/: Button.cpp  Button.hpp  Data.cpp  Data.hpp  DisplayLayout.cpp  DisplayLayout.hpp  Element.cpp  Element.hpp  Menu.cpp  Menu.hpp  MenuOption.cpp  MenuOption.hpp  TextElement.cpp  TextElement.hpp  Util.cpp  Util.hpp
src/engine/UI/menu/: Menu.cpp  Menu.hpp  MenuOption.cpp  MenuOption.hpp
src/engine/events/: ButtonCLickEvent.hpp  EventArgs.hpp  EventSystem.hpp  KeyPressEvent.hpp  MouseClickEvent.hpp  MouseEvents.hpp  MouseMotionEvent.hpp  TextEvent.hpp
src/engine/net/: Client.cpp  Client.hpp  Client.tpp  Connection.cpp  Connection.hpp  Connection.tpp  Message.hpp  MessageQueue.hpp  MessageQueue.tpp  Server.cpp  Server.hpp  Server.tpp
src/mvp/: CommonTypes.hpp  DedicatedServer.cpp  GameData.hpp  MvpServer.cpp  MvpServer.hpp  commontypes.hpp  main.cpp  mvpserver.cpp  shared.cpp  shared.hpp
src/mvp/managers/: Animator.cpp  Animator.hpp  GameManager.cpp  GameManager.hpp  MenuManager.cpp  MenuManager.hpp  NetworkManager.cpp  NetworkManager.hpp  SelectionManager.cpp
src/mvp/objects/: Animator.cpp  Animator.hpp  Background.cpp  Background.hpp  Base.cpp  Base.hpp  Decoration.cpp  Decoration.hpp  GameManager.cpp  GameManager.hpp  Grid.cpp  Grid.hpp  GridObject.cpp  GridObject.hpp  IconifiedButton.hpp  MenuManager.cpp  MenuManager.hpp  MenuMovingShip.hpp  NetworkManager.cpp  NetworkManager.hpp  Quad.cpp  Quad.hpp  SelectionManager.cpp  SelectionManager.hpp  Ship.cpp  Ship.hpp  Sprite.cpp  Sprite.hpp  TreasureIsland.cpp  TreasureIsland.hpp  UIManager.hpp
src/test/: Logger.test.cpp  NetworkTestData.hpp  TestHandler.hpp  depthOrderedCollection.test.cpp  gameObject.test.cpp  pathfinding.test.cpp  renderer.test.cpp  scene.test.cpp  testclient.cpp  testserver.cpp  ui.test.cpp  vector.test.cpp
